<resources>
    <string name="app_name">DeskEraDemo</string>
    <string name="title_profile">Profile</string>
    <string name="title_item">Items</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_table">Table</string>
    <string name="title_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">List is empty</string>
    <string name="label_email">E-mail</string>
    <string name="label_hobby">Hobby</string>
    <string name="label_doj">Date of joining</string>
    <string name="hint_email">email address</string>
    <string name="hint_hobby">your hobby</string>
    <string name="hint_doj">MM/DD/YYYY</string>
    <string name="label_hint_email">Add email</string>
    <string name="label_hint_hobby">Add Hobby</string>
    <string name="label_hint_doj">Add Date of joining</string>
    <string name="label_username">Username</string>
    <string name="description_profile_image">profile image</string>
    <string name="description_item_image">Item image</string>
    <string name="err_null_username">Username should not be empty</string>
    <string name="err_null_email">email should not be empty</string>
    <string name="err_null_doj">Date of joining is not mentioned</string>
    <string name="err_null_hobby">Empty hobby</string>
    <string name="label_change_profile">Add profile picture</string>
    <string name="close">Close</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_camera">Camera</string>
    <string name="info_storage_permission">Storage permission is required to take picture.</string>
    <string name="title_permission_required">Permission Required!</string>
    <string name="info_storage_permission_denied">Storage Permission is not granted.Could not
        access Camera.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="label_all">All</string>
    <string name="label_category_a">Category A</string>
    <string name="label_category_b">Category B</string>
    <string name="toolbar">Toolbar</string>
    <string name="temperature_display">Temperature Display unit</string>
    <string name="notifications">Notifications</string>
    <string name="probation_date">Date Probation Ends</string>
    <string name="view_details">View Details</string>
    <string name="sound">Sound</string>
    <string name="date_not_available">Date not available</string>
    <string name="label_fahrenheit">Fahrenheit</string>
    <string name="label_celsius">Celsius</string>
    <string name="label_probation_duration">Probation Duration</string>
    <string name="label_date_of_permanent">Date of Permanent</string>
    <string name="label_probation_length">Probation Length</string>
    <string name="probation_duration">%d Months and %d days</string>
    <string name="more_than_six_months">More than 6 months</string>
    <string name="six_months">Exactly 6 months</string>
    <string name="less_than_six_months">Less than 6 months</string>
    <string name="label_na">NA</string>
    <string name="back">Back</string>
    <string name="label_search">Search</string>
    <string name="done">Done</string>
    <string name="delete_items">Delete Table Items</string>
    <string name="selected">%d Selected</string>
    <string name="plus_icon">+</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dash">--</string>
    <string name="empty" />
    <string name="label_save">Save</string>
    <string name="empty_text">Empty text is not allowed</string>
</resources>
