<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_item"
        android:icon="@drawable/ic_item"
        android:title="@string/title_item" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite_yes"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_table"
        android:icon="@drawable/ic_table"
        android:title="@string/title_table" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
