<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.UserDetailsActivity">

    <include layout="@layout/custom_toolbar" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/big_image_size"
                    android:layout_width="@dimen/big_image_size"
                    android:padding="@dimen/d6dp"
                    app:srcCompat="@drawable/ic_account" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_username" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_email" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_doj" />

                <TextView
                    android:id="@+id/tvDoj"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/temperature_display" />

                <TextView
                    android:id="@+id/tvTemperature"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/sound" />

                <TextView
                    android:id="@+id/tvSound"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/notifications" />

                <TextView
                    android:id="@+id/tvNotification"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/probation_date" />

                <TextView
                    android:id="@+id/tvProbationEnd"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_probation_duration" />

                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_date_of_permanent" />

                <TextView
                    android:id="@+id/tvPermanentDate"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_probation_length" />

                <TextView
                    android:id="@+id/tvProbationLength"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/d16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:text="@string/label_hobby" />

                <TextView
                    android:id="@+id/tvHobbies"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:text="@string/dash"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>