<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:background="@color/whiteSmoke"
                                   android:gravity="center_vertical"
                                   android:id="@+id/toolbar"
                                   app:popupTheme="@style/AppTheme.PopupOverlay"
                                   android:layout_alignParentTop="true"
                                   android:layout_height="@dimen/toolbar_height"
                                   android:layout_width="match_parent"
                                   android:elevation="30dp"
                                   app:contentInsetEnd="0dp"
                                   app:contentInsetStart="0dp">

    <RelativeLayout
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <TextView
                android:id="@+id/primaryTextView"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d16dp"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/d8dp"
                android:paddingTop="@dimen/d8dp"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" android:layout_marginLeft="@dimen/d16dp"
                android:layout_alignParentLeft="true"/>

        <TextView
                android:contentDescription="@string/toolbar"
                android:id="@+id/secondaryTextView"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/d16dp"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/d8dp"
                android:paddingTop="@dimen/d8dp"
                android:visibility="gone" android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/d16dp"/>


        <TextView
                android:drawablePadding="@dimen/d6dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:id="@+id/toolbar_title"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingEnd="@dimen/d6dp"
                android:paddingStart="@dimen/d6dp"
                android:singleLine="true"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp" />
    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>
